--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="manifest" href="/manifest.json">
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="/src/encuestas-heineken-app/encuestas-heineken-app.html">
+    <style>
+      html {
+        background-color: greenyellow;
+        background-image: url(images/heineken-mini3.png);
+        background-position: -8px -4px;
+      }
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <encuestas-heineken-app></encuestas-heineken-app>
