--- a/src/encuestas-heineken-app/encuestas-heineken-app.html
+++ b/src/encuestas-heineken-app/encuestas-heineken-app.html
@@ -1,27 +1,105 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
+<link rel="import" href="../../bower_components/app-layout/app-drawer/app-drawer.html">
+<link rel="import" href="../../bower_components/app-layout/app-header-layout/app-header-layout.html">
+<link rel="import" href="../../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
+<link rel="import" href="../../bower_components/app-layout/app-header/app-header.html">
+<link rel="import" href="../../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
+
+<link rel="import" href="../../bower_components/paper-styles/color.html">
+<link rel="import" href="../../bower_components/paper-styles/default-theme.html">
+<link rel="import" href="../../bower_components/paper-styles/shadow.html">
+<link rel="import" href="../../bower_components/paper-styles/typography.html">
+
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+
+<link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html">
 
 <dom-module id="encuestas-heineken-app">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>Hello [[prop1]]</h2>
-  </template>
+    <template>
+        <style>
+            :host {
+                display: block;
+                --app-drawer-content-container: {
+                     background-color: green;
+                };
+                --paper-menu-background-color: none;
+                --paper-menu-color: white;
 
-  <script>
-    Polymer({
+             }
 
-      is: 'encuestas-heineken-app',
+            app-header {
+                background-color: green;
+                color: white;
+                @apply(--paper-font-common-base);
+             }
+            .menu-content {
+                padding-left: 1rem;
+            }
+        </style>
 
-      properties: {
-        prop1: {
-          type: String,
-          value: 'encuestas-heineken-app',
-        },
-      },
+        <app-drawer-layout>
+            <app-drawer>
+                <paper-menu selected="{{menuSeleccionado}}" attr-for-selected="tag">
+                    <paper-item tag="nueva">Nueva encuesta</paper-item>
+                    <paper-item tag="mis">Mis encuestas</paper-item>
+                    <paper-item tag="yo">Yo</paper-item>
+                        <paper-item tag="super">Supervisor</paper-item>
+                        <paper-menu selected="{{menuSeleccionado}}" class="menu-content" attr-for-selected="tag">
+                            <paper-item tag="estadisticas">Estadísticas</paper-item>
+                            <paper-item tag="encuestadores">Encuestadores</paper-item>
+                            <paper-item tag="encuestas">Encuestas</paper-item>
+                        </paper-menu>
+                </paper-menu>
+            </app-drawer>
 
-    });
-  </script>
+            <app-header-layout>
+                <app-header condenses effects="waterfall">
+                    <app-toolbar>
+                        <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
+                        <app-toolbar sticky> Encuestas Heineken </app-toolbar>
+                    </app-toolbar>
+                </app-header>
+
+                <div>
+                    <template is="dom-if" if="[[_esMenu(menuSeleccionado, 'nueva')]]">
+                        [[menuSeleccionado]]
+                    </template>
+                    <template is="dom-if" if="[[_esMenu(menuSeleccionado, 'mis')]]">
+                        [[menuSeleccionado]]
+                    </template>
+                    <template is="dom-if" if="[[_esMenu(menuSeleccionado, 'yo')]]">
+                        [[menuSeleccionado]]
+                    </template>
+                    <template is="dom-if" if="[[_esMenu(menuSeleccionado, 'estadisticas')]]">
+                        [[menuSeleccionado]]
+                    </template>
+                    <template is="dom-if" if="[[_esMenu(menuSeleccionado, 'encuestadores')]]">
+                        [[menuSeleccionado]]
+                    </template>
+                    <template is="dom-if" if="[[_esMenu(menuSeleccionado, 'encuestas')]]">
+                        [[menuSeleccionado]]
+                    </template>
+                </div>
+            </app-header-layout>
+        </app-drawer-layout>
+
+    </template>
+
+    <script>
+        Polymer({
+
+            is: 'encuestas-heineken-app',
+
+            properties: {
+                menuSeleccionado: String
+            },
+            _esMenu: function(menuSeleccionado, tag) {
+                console.log(menuSeleccionado);
+                return menuSeleccionado == tag;
+            }
+        });
+    </script>
 </dom-module>
