--- a/src/encuestas/hnk-encuesta-test-prg.html
+++ b/src/encuestas/hnk-encuesta-test-prg.html
@@ -17,7 +17,7 @@
         <iron-label>[[titulo]]</iron-label>
         <paper-radio-group selected="{{respuesta}}" allow-empty-selection>
             <template is="dom-repeat" items="[[respuestas]]">
-                <paper-radio-button name="[[item.id]]">[[item.texto]]</paper-radio-button>
+                <paper-radio-button name="[[item]]">[[item.texto]]</paper-radio-button>
             </template>
         </paper-radio-group>
     </template>
