--- a/src/encuestas-heineken-app/encuestas-heineken-app.html
+++ b/src/encuestas-heineken-app/encuestas-heineken-app.html
@@ -104,7 +104,7 @@
                         return {
                             id: 1,
                             nombre: 'Saúl Gutiérrez Santamaría',
-                            supervisor: false
+                            supervisor: true
                         };
                     }
                 },
