--- a/src/encuestas/hnk-encuesta-test-grp.html
+++ b/src/encuestas/hnk-encuesta-test-grp.html
@@ -24,6 +24,24 @@
                 font-size: 1.25rem;
             }
 
+            fieldset {
+                margin: 4px;
+                background-color: var(--divider-color);
+                border-width: 0;
+                border-radius: 5px;
+                padding: 0;
+            }
+
+            h3 {
+                background-color: var(--primary-background-color);
+                padding: 1em 0;
+                margin: 0;
+                border-width: 1px;
+                border-color: var(--divider-color);
+                border-style: solid;
+                border-radius: 5px 5px 0 0;
+            }
+
         </style>
 
         <fieldset>
