--- a/src/util/hnk-base.html
+++ b/src/util/hnk-base.html
@@ -3,6 +3,12 @@
     window.hnk.BaseBehavior = {
         _igual: function (a, b) {
             return a == b;
+        },
+        _isSupervisor: function(usuario) {
+            return usuario.supervisor;
+        },
+        getUrl: function (config, tag) {
+
         }
     };
 </script>
