--- a/src/pages/hnk-encuesta-page.html
+++ b/src/pages/hnk-encuesta-page.html
@@ -4,9 +4,9 @@
 
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 
-<link rel="import" href="hnk-encuesta-page.html">
+<link rel="import" href="../encuestas/hnk-encuesta.html">
 
-<link rel="import" href="../util/hnk-base.html">
+<link rel="import" href="hnk-page.html">
 
 <link rel="import" href="../util/hnk-base.html">
 <link rel="import" href="../util/shared-styles.html">
@@ -16,19 +16,6 @@
         <style include="shared-styles">
             :host {
                 display: block;
-
-                --app-drawer-content-container: {
-                     background-color: var(--color-fuerte, green);
-                 };
-                --paper-menu-background-color: none;
-                --paper-menu-color: var(--color-texto);
-            }
-
-            app-header {
-                @apply(--mixin-fondo);
-            }
-            .menu-content {
-                padding-left: 1rem;
             }
         </style>
 
