--- a/src/encuestas-heineken-app/encuestas-heineken-app.html
+++ b/src/encuestas-heineken-app/encuestas-heineken-app.html
@@ -40,6 +40,7 @@
                 tail="{{subroute}}"></app-route>
 
         <iron-ajax id="ajaxConfig" url="/config" handle-as="json" last-response="{{config}}" auto></iron-ajax>
+        <iron-ajax id="ajaxUsuario" url="/api/usuarios" handle-as="json" on-response="_onResponseUsuarios" auto></iron-ajax>
 
         <hnk-page usuario="[[usuario]]" menu="[[menu]]" menu-seleccionado="{{menuSeleccionado}}">
             <iron-pages selected="[[routeData.view]]" attr-for-selected="name">
@@ -76,14 +77,14 @@
                     .catch(function() {
                         console.error('No hay menú')
                     }.bind(this));
-
-                //Cargar usuario
-
             },
             _observerMenuSeleccionado: function(menuSeleccionado) {
                 if (menuSeleccionado.href) {
                     //this.$.router.go(menuSeleccionado.href);
                 }
+            },
+            _onResponseUsuarios: function(e, detail) {
+                this.usuario = e.detail.response[0];
             }
         });
     </script>
