--- a/src/encuestas-heineken-app/encuestas-heineken-app.html
+++ b/src/encuestas-heineken-app/encuestas-heineken-app.html
@@ -40,11 +40,11 @@
                 tail="{{subroute}}"></app-route>
 
         <iron-ajax id="ajaxConfig" url="/config" handle-as="json" last-response="{{config}}" auto></iron-ajax>
-        <iron-ajax id="ajaxUsuario" url="/api/usuarios" handle-as="json" on-response="_onResponseUsuarios" auto></iron-ajax>
+        <iron-ajax id="ajaxUsuario" url="[[url]]" handle-as="json" on-response="_onResponseUsuarios" auto></iron-ajax>
 
         <hnk-page usuario="[[usuario]]" menu="[[menu]]" menu-seleccionado="{{menuSeleccionado}}">
             <iron-pages selected="[[routeData.view]]" attr-for-selected="name">
-                <hnk-nuevaencuesta-page name="nueva" usuario="[[usuario]]" route="{{subroute}}"></hnk-nuevaencuesta-page>
+                <hnk-nuevaencuesta-page name="nueva_encuesta" usuario="[[usuario]]" route="{{subroute}}"></hnk-nuevaencuesta-page>
             </iron-pages>
         </hnk-page>
     </template>
@@ -67,16 +67,21 @@
                 menuSeleccionado: {
                     type: Object,
                     observer: '_observerMenuSeleccionado'
-                }
+                },
+                url: String
             },
             ready: function() {
                 this.getConfig('menu')
-                    .then(function(menu) {
-                        this.menu = menu;
-                    }.bind(this))
-                    .catch(function() {
-                        console.error('No hay menú')
-                    }.bind(this));
+                        .then(function(menu) {
+                            this.menu = menu;
+                        }.bind(this))
+                        .catch(function() {
+                            console.error('No hay menú')
+                        }.bind(this));
+                this.getUrl(this, 'usuarios')
+                        .then(function(url) {
+                            this.url = url;
+                        }.bind(this));
             },
             _observerMenuSeleccionado: function(menuSeleccionado) {
                 if (menuSeleccionado.href) {
